--- a/style.css
+++ b/style.css
@@ -3,8 +3,35 @@
 body {
   width: 700px;
   margin: 0 auto;
+  background-color: #026A51;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1.5rem;
+  color: whitesmoke;
+  border: 10px solid #FFFFFF;
+  border-radius: 30px;
+  padding: 1.5em;
+  text-shadow: 1px 2px 10px #2E294E;
+  
 }
 
 header h1 {
   font-family: 'Audiowide', sans-serif;
+  color: #FFFFFF;
+  padding: 1em;
+}
+
+img {
+  width: 90%;
+  margin: 0 auto;
+  border-radius: 50%;
+}
+
+.nacionalidade {
+  color: #f4ac45;
+  font-size: 2em;
+}
+
+.cidade {
+  color: #d7263d;
+  font-weight: bold;
 }
