--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 
+
 body {
   width: 700px;
   margin: 0 auto;
-  background-color: #026A51;
+  background: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
+  height: 100vh;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.5rem;
   color: whitesmoke;
@@ -20,8 +22,18 @@ header h1 {
   padding: 1em;
 }
 
+.foto-desc {
+  display: flex;
+  justify-content: space-between;
+}
+
+.foto-desc p {
+  width: 45%;
+}
+
 img {
-  width: 90%;
+  filter: drop-shadow(0 0 0.75rem whitesmoke);
+  width: 45%;
   margin: 0 auto;
   border-radius: 50%;
 }
@@ -29,6 +41,10 @@ img {
 ul {
   list-style: none;
   padding: 0;
+}
+
+li:nth-child(odd) {
+  font-family: 'Audiowide', cursive;
 }
 
 li {
